加入配置文件

--- a/2021操作系统/2内核.md
+++ b/2021操作系统/2内核.md
@@ -138,7 +138,7 @@ linux中ps能区分出内核态和用户态线程吗
 
 基于上面的猜测，再来理解一下特权模式，ring0-ring3。
 
-![clipboa1rd](../../clipboa1rd.png)
+![CgqCHl91HB2AdNsAAAEpE6rtlHM754](images/CgqCHl91HB2AdNsAAAEpE6rtlHM754.png)
 
 线程在内核态下应用ring0-ring3的特权。线程在用户态只有ring3的特权。
 
