--- a/2021年总计划.md
+++ b/2021年总计划.md
@@ -1,83 +1,26 @@
-1-2
+1-2 自治前后端分离框架（分享过程技术文章）
 
+3 操作系统
 
+4-5 网络
 
-自制前端框架
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-4-5
-
-
-
-网络
-
-
-
-
-
-
-
-6-8
-
-
-
-编译原理/asm
+6-8 编译原理/java asm
 
 
 
 设计模式
-
-
 
 Java
 
 
 
-
-
-
-
-9-12
-
-
-
-netty/acl
-
-
+9-12 netty/acl
 
 
 
 Oauth2.0
 
-自治前后端分离框架（分享过程技术文章）
 
 
+所有学习的技术都在ACL这里收敛，最终都落实在这个项目中
 
-
-
-
-
-
-
-java asm
-
-
-
-设计模式
-
-
-
-**Unix**网络方面 系统调用 **netty**
